# School

./: .gitattributes  LICENSE  README.md  Znamky.py
ALG/: README.md
ALG/1boats/: CMakeLists.txt  main.c  pub08.out  pub09.out
ALG/2agents/: CMakeLists.txt  main.cpp
ALG/3univnet/: CMakeLists.txt  main.cpp
ALG/4robotcom/: CMakeLists.txt  main.cpp
ALG/5expbvs/: CMakeLists.txt  main.cpp
ALG/6photosyn/: CMakeLists.txt  main.cpp  pub01.in  pub02.in  pub03.in  pub04.in  pub05.in  pub06.in  pub07.in  pub08.in  pub09.in  pub10.in
ALG/7journey/: .gitignore  CMakeLists.txt  main.cpp  pub01.in  pub02.in  pub03.in  pub04.in  pub05.in  pub06.in  pub07.in  pub07.out  pub08.in  pub10.out
ALG/8amazon/: .gitignore  CMakeLists.txt  main.cpp  main_best.cpp  pub01.in  pub02.in  pub03.in  pub04.in  pub05.in  pub06.in  pub07.in  pub08.in  pub09.in  pub10.in
ALG/exam/: CMakeLists.txt  (+10 more)
B22/: EXTRA Formal Letter Writing Tasks.doc  HW1.txt  HW2.txt  HW3.txt  HW4.txt  formal_letter.docx  formal_letter.txt
Bakalářka/: konzultace_01_11_2021.txt
Bakalářka/project/: CMakeLists.txt  main.cpp
EBE/: FEL 2022 - 3. přednáška, Aktuality.pptx  FEL 2022 - 9. přednáška, Nová energetika + Politika.pptx
OPT/: .gitignore  pivot.m
PGR/: .gitignore
PJC/inverse_matrix/: .gitignore  CMakeLists.txt  README.md  main.cpp  matrix.cpp  matrix.h  single_thread_solver.cpp  single_thread_solver.h  solver.cpp  solver.h  test.txt  test_výstup.txt  vstup_01.in  vstup_02.in  vstup_04.in  výstup_00.out  výstup_01.out  výstup_02.out  výstup_03.out  výstup_04.out
PST/: PST_Tahak-2.psd  PST_Tahak1.psd
(+254 files in other folders)
